[package]
authors = ["timey <aydin.sch@outlook.com>"]
edition = "2018"
readme = "README.md"
name = "moisture-monitor"
version = "0.1.0"

[dependencies]
cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"
embedded-hal = "0.2.7" # This is the critical change
microbit-v2 = "0.13.0"
panic-rtt-target = { version = "0.1.2", features = ["cortex-m"] }
rtt-target = "0.6.1"

# this lets you use `cargo fix`!
[[bin]]
name = "moisture-monitor"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations